Pause Submission endpoint
