# engine/src/main/scala/cromwell/webservice/routes/AdminRouteSupport.scala
@@ -1,14 +1,16 @@
 package cromwell.webservice.routes
 
+import java.util.UUID
+
 import akka.actor.{ActorRef, ActorRefFactory}
-import akka.http.scaladsl.model.StatusCodes
-import akka.http.scaladsl.server.Directives._
+import akka.http.scaladsl.model.{Multipart, StatusCodes}
+import akka.http.scaladsl.server.Directives.{post, _}
 import akka.pattern.ask
 import akka.stream.ActorMaterializer
 import akka.util.Timeout
+import cromwell.core.WorkflowSubmitted
 import cromwell.engine.workflow.workflowstore.SqlWorkflowStore.{WorkflowAndState, WorkflowsBySubmissionId}
-import cromwell.engine.workflow.workflowstore.WorkflowStoreActor.{ListSubmissions, ListSubmissionsResponse, ListSubmissionsResponseFailure, ListSubmissionsResponseSuccess}
-import cromwell.services.admin.AdminServiceMessages._
+import cromwell.engine.workflow.workflowstore.WorkflowStoreActor._
 import cromwell.webservice.WebServiceUtils
 import cromwell.webservice.WebServiceUtils.EnhancedThrowable
 import de.heikoseeberger.akkahttpcirce.ErrorAccumulatingCirceSupport._
@@ -32,7 +34,8 @@ trait AdminRouteSupport extends WebServiceUtils {
   implicit val workflowAndStateEncoder: Encoder[WorkflowAndState] = deriveEncoder[WorkflowAndState]
   implicit val listSubmissionsDataEncoder: Encoder[WorkflowsBySubmissionId] = deriveEncoder[WorkflowsBySubmissionId]
   implicit val listSubmissionsEncoder: Encoder[ListSubmissionsResponseSuccess] = deriveEncoder[ListSubmissionsResponseSuccess]
-  implicit val pauseSubmissionEncoder: Encoder[PauseSubmissionSuccess.type] = deriveEncoder[PauseSubmissionSuccess.type]
+
+  implicit val pauseResponseEncoder: Encoder[PauseSubmissionResponseSuccess] = deriveEncoder[PauseSubmissionResponseSuccess]
 
   val adminRoutes = concat(
     path("admin" / Segment / "listSubmissions") { _ =>
@@ -40,20 +43,27 @@ trait AdminRouteSupport extends WebServiceUtils {
         case Success(response: ListSubmissionsResponseSuccess) =>
           complete(response.asJson)
         case Success(response: ListSubmissionsResponseFailure) =>
-          new Exception(response.reason).failRequest(StatusCodes.BadRequest)
+          new Exception(response.reason).failRequest(StatusCodes.InternalServerError)
         case Failure(e) =>
           e.failRequest(StatusCodes.InternalServerError)
       }
     },
     path("admin" / Segment / "pauseSubmission") { _ =>
-      onComplete(serviceRegistryActor.ask(PauseSubmissionRequest).mapTo[PauseSubmissionResult]) {
-        case Success(PauseSubmissionSuccess) =>
-          complete(PauseSubmissionSuccess.asJson)
-        case Success(response: PauseSubmissionFailure) =>
-          new Exception(response.reason).failRequest(StatusCodes.BadRequest)
-        case Failure(e) =>
-          e.failRequest(StatusCodes.InternalServerError)
+      post {
+        entity(as[Multipart.FormData]) { formData: Multipart.FormData =>
+          onComplete(materializeFormData(formData) flatMap { args =>
+            val submissionId = UUID.fromString(args("submissionId").utf8String)
+
+            workflowStoreActor.ask(PauseSubmission(submissionId, WorkflowSubmitted)).mapTo[PauseSubmissionResponse] }) {
+              case Success(resp: PauseSubmissionResponseSuccess) =>
+                complete(resp.asJson)
+              case Success(response: PauseSubmissionResponseFailure) =>
+                new Exception(response.reason).failRequest(StatusCodes.InternalServerError)
+              case Failure(e) =>
+                e.failRequest(StatusCodes.InternalServerError)
+            }
+          }
+        }
       }
-    }
   )
 }
